--- a/nlp.html
+++ b/nlp.html
@@ -110,7 +110,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1934377'>Job Application for Senior Research Scientist- AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1934377'>Job Application for Senior Research Scientist- AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -206,11 +206,11 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
@@ -350,7 +350,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 machine learning to surface new knowledge. We are a VC-backed tech company
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 Ago 2019 ... Como Analista de Machine Learning na Axur, seu desafio ser? trabalhar com 
 processamento de linguagem natural, analisando dados e criando algoritmos 
@@ -373,7 +373,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundintern/jobs/4404748002'>Job Application for Machine Learning Scientist Intern - Natural Language Processing at SoundHound Inc. Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
@@ -462,11 +462,11 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
